--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.11.1",
+    "replaceall": "^0.1.6",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.7"
   },
   "devDependencies": {
