--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.0.1",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.11.1",
+    "quill-image-resize-module": "^3.0.0",
     "replaceall": "^0.1.6",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
