--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.11.1",
+    "material-icons": "^0.3.1",
     "quill-image-resize-module": "^3.0.0",
     "replaceall": "^0.1.6",
+    "tiptap": "^1.25.0",
+    "tiptap-extensions": "^1.27.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-quill-editor": "^3.0.6",
