--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^3.0.1",
+    "apexcharts": "^3.8.6",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "countup.js": "^2.0.4",
     "element-ui": "^2.11.1",
     "material-icons": "^0.3.1",
     "quill-image-resize-module": "^3.0.0",
@@ -19,7 +21,9 @@
     "tiptap-extensions": "^1.27.0",
     "v-clipboard": "^2.2.2",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.5.0",
     "vue-axios": "^2.1.4",
+    "vue-countup-v2": "^4.0.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.7"
   },
