--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tinymce/tinymce-vue": "^3.0.1",
     "apexcharts": "^3.8.6",
     "axios": "^0.19.0",
+    "browser-md5-file": "^1.1.1",
     "core-js": "^2.6.5",
     "countup.js": "^2.0.4",
     "element-ui": "^2.11.1",
     "material-icons": "^0.3.1",
-    "quill-image-resize-module": "^3.0.0",
     "replaceall": "^0.1.6",
     "tiptap": "^1.25.0",
     "tiptap-extensions": "^1.27.0",
@@ -24,7 +23,6 @@
     "vue-apexcharts": "^1.5.0",
     "vue-axios": "^2.1.4",
     "vue-countup-v2": "^4.0.0",
-    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.7"
   },
   "devDependencies": {
