--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "apexcharts": "^3.15.0",
-    "axios": "^0.19.1",
+    "apexcharts": "^3.16.1",
+    "axios": "^0.19.2",
     "browser-md5-file": "^1.1.1",
     "core-js": "^2.6.11",
+    "cos-js-sdk-v5": "^0.5.23",
     "countup.js": "^2.0.4",
     "element-ui": "^2.13.0",
+    "local-storage": "^2.0.0",
     "material-icons": "^0.3.1",
     "replaceall": "^0.1.6",
     "tiptap": "^1.26.6",
@@ -23,13 +25,13 @@
     "vue-apexcharts": "^1.5.2",
     "vue-axios": "^2.1.5",
     "vue-countup-v2": "^4.0.0",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
     "@vue/cli-service": "^3.12.1",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
